--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,13 @@ spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:/data.sql
+spring.jpa.defer-datasource-initialization=true
 
-server.port=8080
+
+#server.port=8080
+server.port=8077
 server.error.include-stacktrace=never
 server.error.include-message=always
 
@@ -16,3 +21,5 @@ logging.level.org.springframework.security=DEBUG
 
 jwt.secret=very-very-super-secret-key-at-least-32-characters-long
 jwt.access-token-expiration=604800
+
+#http://localhost:8077/swagger-ui/index.html
