--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,16 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/eduTool
 spring.datasource.username=postgres
 spring.datasource.password=12345
 
-spring.jpa.hibernate.ddl-auto=create
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:/data.sql
-spring.jpa.defer-datasource-initialization=true
+
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.validate-on-migrate=true
 
 
 #server.port=8080
