--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -15,3 +15,10 @@ databaseChangeLog:
       file: db/changelog/changes/08-add-email-verification-token.yaml
   - include:
       file: db/changelog/changes/09-fix-refresh-tokens-sequence.yaml
+  - include:
+      file: db/changelog/changes/10-add-enrollment-unique-constraint.yaml
+  - include:
+      file: db/changelog/changes/11-add-soft-delete-enrollment.yaml
+  - include:
+      file: db/changelog/changes/12-add-soft-delete-project.yaml
+
