--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,4 +21,5 @@ databaseChangeLog:
       file: db/changelog/changes/11-add-soft-delete-enrollment.yaml
   - include:
       file: db/changelog/changes/12-add-soft-delete-project.yaml
-
+  - include:
+      file: db/changelog/changes/13-add-status-to-periodic-reports.yaml
