--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -23,3 +23,7 @@ databaseChangeLog:
       file: db/changelog/changes/12-add-soft-delete-project.yaml
   - include:
       file: db/changelog/changes/13-add-status-to-periodic-reports.yaml
+  - include:
+      file: db/changelog/changes/10-add-status-to-semester.yaml
+  - include:
+      file: db/changelog/changes/11-add-status-to-course.yaml
