Add status column to courses table in database schema

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -25,3 +25,5 @@ databaseChangeLog:
       file: db/changelog/changes/13-add-status-to-periodic-reports.yaml
   - include:
       file: db/changelog/changes/14-add-enrollment-unique-constraint.yaml
+  - include:
+      file: db/changelog/changes/15-add-status-to-courses.yaml
