Fix critical bugs in project and enrollment logic
- Fix: Project can't be deleted/changed when members exist (including removed)
  - Add countAllMembersByProject() to count all members including removed ones
  - Update delete/update project validation to check all members

- Fix: Race condition preventing 1 student from joining 2 projects
  - Update validation to check both project field and removedFromProjectAt
  - Add completely-remove-from-project action for clean project transition

- Fix: Update enrollment missing validation
  - Prevent changing project when student has active project
  - Auto clear removedFromProjectAt when assigning to new project

- Feature: Project search with partial match (LIKE query)
  - Change 'code' param to 'search' param
  - Search by project code or name with case-insensitive partial match

- Performance: Add database indexes
  - idx_removed_from_project for filtering removed students
  - idx_project_active composite index for active member queries
  - Add Liquibase migration 16-add-enrollment-indexes.yaml

- Business Logic: Clarify removed student workflow
  - Removed students can be restored to same project
  - Must use completely-remove-from-project before assigning to new project
  - History preserved until explicitly cleared

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -27,3 +27,5 @@ databaseChangeLog:
       file: db/changelog/changes/14-add-enrollment-unique-constraint.yaml
   - include:
       file: db/changelog/changes/15-add-status-to-courses.yaml
+  - include:
+      file: db/changelog/changes/16-add-enrollment-indexes.yaml
